todo-app/java/springboot-api/src/main/deployments/ocp/02.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: springboot-todo
    version: v1
    app.openshift.io/runtime: spring-boot
  name: springboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-todo
      version: v1
  strategy: {}
  template:
    metadata:
      labels:
        app: springboot-todo
        version: v1
    spec:
      containers:
      - image: quay.io/naveenkendyala/quarkus-demo-springboot-todo:v1
        name: springboot-todo
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "500m"
            memory: "175Mi"
          limits:
            cpu: "500m"
            memory: "350Mi"
        livenessProbe:
          httpGet:
              port: 8080
              path: /applive
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 2          
        readinessProbe:
          httpGet:
            path: /appready
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
status: {}
