todo-app/java/springboot-api/src/main/deployments/ocp/03.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: springboot-todo-svc
  name: springboot-todo-svc
spec:
  ports:
  - port: 8080
    #nodePort: 30201
    protocol: TCP
    targetPort: 8080
  selector:
    app: springboot-todo
    version: v1
  type: ClusterIP
status:
  loadBalancer: {}
