todo-app/java/springboot-api/src/main/deployments/ocp/06.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: springboot-todo-route
  name: springboot-todo-route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: springboot-todo-svc
    weight: 100
  wildcardPolicy: None
